# MimoFPS

./: Cargo.toml
src/: main.rs
