[package]
name = "MimoFPS"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }

r503 = { path = "../r503" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
